@@ -2,6 +2,8 @@
 -----
 1. Allow setting of custom device name for UMS and MTP devices.
 2. Allow to use table-view for earch results.
+3. Add option to auto-switch to context view X seconds after playback starts,
+   and switch back X seconds after stopped.
 
 1.3.0
 -----
